css folder name

--- a/network/index.html
+++ b/network/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<!--script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script-->
 		<script src="d3.v3.min.js" charset="utf-8"></script>
-		<link type="text/css" rel="stylesheet" href="_css/sideBar000.css">
+		<link type="text/css" rel="stylesheet" href="css/sideBar000.css">
 		<title>visualize random data</title>
 	</head>
 
