--- a/network/index.html
+++ b/network/index.html
@@ -5,7 +5,7 @@
 		<!--script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script-->
 		<script src="d3.v3.min.js" charset="utf-8"></script>
 		<link type="text/css" rel="stylesheet" href="css/sideBar000.css">
-		<title>visualize random data</title>
+		<title>Network Optimization Tool (Desktop)</title>
 	</head>
 
 
@@ -42,7 +42,7 @@
 var agent = navigator.userAgent.toLowerCase();
 if (agent.match(/(iPad|SCH-I|xoom|NOOK|silk|kindle|GT-P|touchpad|kindle|sch-t|viewpad|bolt|playbook)/i)) {
      alert("Redirecting to the touch-based tablet version...")
-     location.replace("mobi");
+     location.replace("../network_mobile");
 }
 </script>
 
