--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="network">A Network Optimization Tool (Desktop) </a>
         </p>
         <p>
-            <a href="network/mobi">A Network Optimization Tool (Tablet)</a>
+            <a href="network_mobile">A Network Optimization Tool (Tablet)</a>
         </p>
     </div>
 
